crates/swarm-abm-derive/tests/ui/empty_enum.rs
use swarm_abm_derive::MultiAgent;

#[derive(MultiAgent)]
enum Empty {}

fn main() {}
